kube/deployment_webmain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-webmain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webmain
  template:
    metadata:
      labels:
        app: webmain
    spec:
      containers:
      - name: webmain
        image: playinkube/webmain
        imagePullPolicy: IfNotPresent
