kube/service_msuser.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-msuser
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3000
  selector:
      app: msuser
  type: LoadBalancer
