kube/service_webmain.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-webmain
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3000
  selector:
    app: webmain
  type: ClusterIP
