kube/ingress_api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: api.playinkube.com
      http:
        paths:
          - path: /user(/|$)(.*)
            backend:
              serviceName: service-msuser
              servicePort: 3001
