kube/ingress_webmain.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-webmain
spec:
  rules:
    - host: www.playinkube.com
      http:
        paths:
          - path: 
            backend:
              serviceName: service-webmain
              servicePort: 3001
